tests/ty-var-annot-02/out.txt
error: mismatched types: expected int, found '25
  ┌─ err.sml:2:29
  │
2 │ fun 'a f (id: 'a -> 'a) x = bar (id x)
  │                             ^^^^^^^^^^

typechecking failed
